[gd_scene load_steps=3 format=3 uid="uid://bteg5b1d48tn7"]

[ext_resource type="Script" path="res://Cards/Black Cards/Creatures/Creature Scripts/Helheim Draugr.gd" id="1_j0lot"]
[ext_resource type="Texture2D" uid="uid://drriw2a7t30so" path="res://Art/black card temp.png" id="2_6p0n8"]

[node name="HelheimDraugr" type="Node2D"]
script = ExtResource("1_j0lot")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_6p0n8")

[node name="attackLabel" type="Label" parent="Sprite2D"]
offset_left = -43.0
offset_top = 38.0
offset_right = -7.0
offset_bottom = 54.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "test"

[node name="defenseLabel" type="Label" parent="Sprite2D"]
offset_left = 2.0
offset_top = 38.0
offset_right = 41.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Test"

[node name="nameLabel" type="Label" parent="Sprite2D"]
offset_left = -43.0
offset_top = -56.0
offset_right = 37.0
offset_bottom = -42.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8

[node name="energyLabel" type="Label" parent="Sprite2D"]
offset_left = 29.0
offset_top = -56.0
offset_right = 42.0
offset_bottom = -44.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
